Fix header alignment

--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@ img {
 
 #category-title {
     text-align: center;
-    padding-left: 10px;
     font-family: Tahoma, Arial, sans-serif;
     text-shadow: 0px 2px #2532374f;
 }
